--- a/public/assets/css/template.css
+++ b/public/assets/css/template.css
@@ -36,7 +36,7 @@ header.header .logo {
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 2rem;
+    font-size: 1.8rem;
     flex-basis: 250px;
     height: 100%;
 }
@@ -150,7 +150,7 @@ body.hide-sidebar aside.sidebar {
 
 aside.sidebar .sidebar-widgets {
     position: sticky;
-    bottom: 20px;
+    bottom: 10px;
 }
 
 aside.sidebar .sidebar-widget {
@@ -171,7 +171,7 @@ aside.sidebar .sidebar-widget .info {
 }
 
 .division {
-    widows: 80%;
+    widows: 80;
     border: solid 1px #EEE;
 }
 
@@ -185,7 +185,7 @@ main.content {
     margin: 20px;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.2);
 }
 
 main.content .content-title {
@@ -225,7 +225,7 @@ footer.footer {
 }
 
 .record {
-    font-size: 2.2rem;
+    font-size: 2rem;
 }
 
 .summary-boxes {
